NEXT-17902 - Add Customer entity when Order is in context

--- a/src/Administration/Resources/app/administration/src/module/sw-flow/component/sw-flow-sequence-action/sw-flow-sequence-action.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-flow/component/sw-flow-sequence-action/sw-flow-sequence-action.html.twig
@@ -236,6 +236,7 @@
     {% block sw_flow_sequence_action_modal %}
     <sw-flow-sequence-modal
         :sequence="currentSequence"
+        :action="selectedAction"
         :modal-name="modalName"
         @process-finish="onSaveActionSuccess"
         @modal-close="onCloseModal"
