--- a/src/Administration/Resources/app/administration/src/module/sw-flow/component/sw-flow-sequence-modal/sw-flow-sequence-modal.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-flow/component/sw-flow-sequence-modal/sw-flow-sequence-modal.html.twig
@@ -1,7 +1,7 @@
 {% block sw_flow_sequence_modal %}
 <component
     :is="modalName"
-    v-bind="{ sequence }"
+    v-bind="{ sequence, action }"
     @process-finish="processSuccess"
     @modal-close="onClose"
 />
