--- a/src/Administration/Resources/app/administration/src/module/sw-flow/component/sw-flow-sequence-action/sw-flow-sequence-action.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-flow/component/sw-flow-sequence-action/sw-flow-sequence-action.html.twig
@@ -74,10 +74,17 @@
                                 {% block sw_flow_sequence_action_actions_item_name %}
                                 <div class="sw-flow-sequence-action__action-name">
                                     <sw-icon
+                                        v-if="!item.iconRaw"
                                         :name="`${item.icon}`"
                                         size="12px"
                                         class="sw-icon-action"
                                     />
+                                    <img
+                                        v-else
+                                        class="sw-flow-sequence-action__icon-raw"
+                                        :src="`data:image/png;base64, ${item.iconRaw}`"
+                                        alt=""
+                                    >
 
                                     <h3>{{ item.label }}</h3>
                                 </div>
@@ -207,10 +214,17 @@
                             >
                                 {% block sw_flow_sequence_action_select_results_list_result_label %}
                                 <sw-icon
+                                    v-if="!item.iconRaw"
                                     :name="`${item.icon}`"
                                     size="12px"
                                     class="sw-icon-action"
                                 />
+                                <img
+                                    v-else
+                                    class="sw-flow-sequence-action__icon-raw"
+                                    :src="`data:image/png;base64, ${item.iconRaw}`"
+                                    alt=""
+                                >
 
                                 <sw-highlight-text
                                     v-if="highlightSearchTerm"
