--- a/src/Administration/Resources/app/administration/src/module/sw-flow/component/sw-flow-sequence-action/sw-flow-sequence-action.scss
+++ b/src/Administration/Resources/app/administration/src/module/sw-flow/component/sw-flow-sequence-action/sw-flow-sequence-action.scss
@@ -189,6 +189,11 @@
         margin-left: 9px;
     }
 
+    &__disabled {
+        pointer-events: none;
+        opacity: 0.6;
+    }
+
     &__popover {
         .sw-select-result__result-item-text {
             flex-direction: row !important;
