--- a/src/Administration/Resources/app/administration/src/module/sw-flow/component/sw-flow-sequence-action/sw-flow-sequence-action.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-flow/component/sw-flow-sequence-action/sw-flow-sequence-action.html.twig
@@ -174,8 +174,10 @@
                 >
                     {% block sw_flow_sequence_action_add_icon %}
                     <div class="sw-flow-sequence-action__add-icon">
+                        {# @deprecated tag:v6.5.0 - Padding can be removed #}
                         <sw-icon
                             size="8px"
+                            style="padding: 2px"
                             color="#fff"
                             name="regular-plus-xxs"
                         />
