--- a/src/Administration/Resources/app/administration/src/module/sw-flow/component/sw-flow-sequence-action/sw-flow-sequence-action.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-flow/component/sw-flow-sequence-action/sw-flow-sequence-action.html.twig
@@ -151,6 +151,10 @@
                             >
                             </div>
                             {% endblock %}
+
+                            {% block sw_flow_sequence_action_item_custom %}
+                            {% endblock %}
+
                         </li>
                         {% endblock %}
                     </transition-group>
